[package]
name = "whitelist-transfer-hook-q2"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "whitelist_transfer_hook_q2"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "1.0.2"
anchor-spl = "1.0.2"
# Library for easy management of 8-byte discriminators
spl-discriminator = "0.5.1"
# Library defining a generic state interface to encode additional required accounts for an instruction, using Type-Length-Value structures
spl-tlv-account-resolution = "0.11.1"
# Library with helper to resolve additional accounts
spl-transfer-hook-interface = "2.1.0"
spl-token-2022-interface = "3.0.0"
spl-token-metadata-interface = "1.0.0"



[dev-dependencies]
litesvm = "0.10.0"
solana-message = "3.0.1"
solana-transaction = "3.0.2"
solana-signer = "3.0.0"
solana-keypair = "3.0.1"
spl-associated-token-account-interface = "2"
spl-token-2022 = "11.0.0"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
